--- a/index.html
+++ b/index.html
@@ -8,17 +8,13 @@
 <link rel="stylesheet" href="style.css">
 
 <style>
-p {
-text-align: center
-
-}
 
 </style>
 
 </head>
 <body>
     <h1 style="text-align: center"><strong><title>Dark Barbers</title></strong></h1>
-
+center
     <p style=""><em>Nossa Barbearia se <strong>localiza em Piraquara-PR na Avenida Getúlio Vargas, ao lado do Correio</strong></em>.
     Teremos diversos cortes com valores acessíveis.</p>
 
