--- a/index.html
+++ b/index.html
@@ -7,18 +7,14 @@
 
 <link rel="stylesheet" href="style.css">
 
-<style>
-
-</style>
-
 </head>
 <body>
-    <h1 style="text-align: center"><strong><title>Dark Barbers</title></strong></h1>
+    <h1><strong><title>Dark Barbers</title></strong></h1>
 center
     <p style=""><em>Nossa Barbearia se <strong>localiza em Piraquara-PR na Avenida Getúlio Vargas, ao lado do Correio</strong></em>.
     Teremos diversos cortes com valores acessíveis.</p>
 
-    <p style="font-size: 20px; style="text-align: center"><strong>preços:</strong>
+    <p id="missao"<strong>preços:</strong>
     Cabelo: R$22,00
     Barba: R$25,00
     Sobrancelha: R$5,00
